# recolor

./: .gitignore  CMakeLists.txt  Makefile  README.md  SDL_model.h  Solution.h  date2_arblondeau.txt  date2_cgoedefroit.txt  date2_vandrault.txt  date_arblondeau.txt  date_cgoedefroit.txt  date_vandrault.txt  game.c  game.h  game_io.c  main_sdl.c  note.txt  recolor_sdl.c  recolor_solve.c  recolor_text.c  solution.c  solution.h  test_game_arblondeau.c  test_game_cgoedefroit.c  test_game_vandrault.c  test_solution_arblondeau.c  toutdoux.md
android/: AndroidManifest.xml
android/jni/src/: Android.mk  Makefile
android/res/layout/: activity_recolor.xml
android/res/values/: strings.xml
android/src/fr/toutdoux/recolor/: RecolorActivity.java
include/: SDL_model.h  create_rand_game.h  game_rand.h
lib/: create_rand_game.c  game_rand.c
src/: recolor_sdl.c  recolor_text.c
